[package]
name = "liftor"
authors = ["C-3PO the Dragon Slayer"]
description = "Functors for Rust lifetimes"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
keywords = [
    "functor",
    "lifetimes",
    "liftor",
    "gat",
    "hrtb",
]
categories = [
    "no-std",
    "rust-patterns",
]
repository = "https://github.com/c3potheds/liftor"

[dev-dependencies]
static_assertions = "1.1.0"
